# vin-ui-cli

./: Cargo.toml  LICENSE  README.md  install.sh
src/: cli.rs  main.rs
src/commands/: add.rs  init.rs  list.rs  mod.rs
src/models/: component.rs
src/utils/: component.rs  components.rs  mod.rs  project.rs  template_finder.rs  ui.rs
templates/: button.json  button.tsx  neon-timeline.json  neon-timeline.tsx  neon-underline.tsx  random-emoji.tsx
templates/utils/: button.css  neon-timeline.css  timeline-data.ts
