[package]
name = "vin-ui-cli"
version = "0.1.0"
edition = "2021"
author = ["Vinod KR <vinodkumarmurmu62@gmail.com>"]
description = "A cli UI Library that is independ of package managers"


[dependencies]
anyhow = "1.0.97"
clap = "4.5.36"
colored = "3.0.0"
dialoguer = "0.11.0"
fs_extra = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
